# gentroutils

./: .gitignore  202507_dropped_studies.txt  CHANGELOG.md  Makefile  README.md  config.yaml  conftest.py  log.txt  pyproject.toml  setup.sh
.github/workflows/: _release.yaml  _tag.yaml  build.yaml  dev-release.yaml  pr.yaml  release.yaml  release_pr.yaml  tag.yaml  test.yaml
.github/workflows/pr.yaml/: pr.yaml
gwas_catalog_curation/: 00_prepare_tables_for_curation.R  20250426_input_for_curation.xlsx  README.txt  missing_studies.tsv
src/gentroutils/: __init__.py  app_context.py  gcs.py  prepare_gwas_curation.py  update_gwas_release.py
src/gentroutils/cli/: __init__.py  utils.py
src/gentroutils/cloud/: __init__.py
src/gentroutils/commands/: __init__.py  generate_clumping_manifest.py  prepare_curation_table.py  update_gwas_curation_metadata.py  utils.py  validate_gwas_curation.py
src/gentroutils/exceptions/: __init__.py
src/gentroutils/github/: __init__.py
src/gentroutils/io/transfer/: ftp_to_gcs.py  polars_to_gcs.py
src/gentroutils/lib/: __init__.py  release.py
src/gentroutils/manifests/: __init__.py  curation.py
src/gentroutils/parsers/: curation.py
src/gentroutils/tasks/: curation.py
tests/: conftest.py  test_cli.py  test_cloud.py  test_ftp.py  test_prepare_curation_table.py  test_transfer.py  test_update_gwas_curation_metadata.py  test_validate_gwas_curation.py
tests/io/transfer/: test_ftp_to_gcs.py  test_polars_to_gcs.py
tests/parsers/: test_curation.py
tests/tasks/: test_crawl_task.py  test_curation_task.py  test_fetch_task.py
