[project]
name = "gentroutils"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Szymon Szyszkowski", email = "ss60@mib117351s.internal.sanger.ac.uk" }
]
dependencies = [
    "typer>=0.12.3",
    "google>=3.0.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.6",
    "pytest>=8.3.2",
    "deptry>=0.19.0",
    "pre-commit>=3.8.0",
    "interrogate>=1.7.0",
    "isort>=5.13.2",
    "mypy>=1.11.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gentroutils"]



