[project]
name = "gentroutils"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Szymon Szyszkowski", email = "ss60@mib117351s.internal.sanger.ac.uk" },
]
dependencies = ["google>=3.0.0", "click>=8.1.7"]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.scripts]
gentroutils = "gentroutils:cli"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.6",
    "pytest>=8.3.2",
    "deptry>=0.19.0",
    "pre-commit>=3.8.0",
    "interrogate>=1.7.0",
    "isort>=5.13.2",
    "mypy>=1.11.1",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "pytest-sugar>=1.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gentroutils"]

# test configuration
[tool.pytest.ini_options]
markers = ["integration_test", "unit_test"]
addopts = "-n auto --doctest-modules --cov=gentroutils --cov-report=xml -s -p no:warnings --cov-report term"
pythonpath = ["src/"]
testpaths = ["tests/"]
