[project]
name = "gentroutils"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Szymon Szyszkowski", email = "ss60@mib117351s.internal.sanger.ac.uk" },
]
dependencies = [
    "click>=8.1.7",
    "google-cloud-storage>=2.18.1",
    "returns>=0.23.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.scripts]
gentroutils = "gentroutils:cli"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.6",
    "pytest>=8.3.2",
    "deptry>=0.19.0",
    "pre-commit>=3.8.0",
    "interrogate>=1.7.0",
    "isort>=5.13.2",
    "mypy>=1.11.1",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "pytest-sugar>=1.0.0",
    "pydoclint>=0.5.6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gentroutils"]

# test configuration
[tool.pytest.ini_options]
markers = ["integration_test", "unit_test"]
addopts = "-n auto --doctest-modules --cov=gentroutils --cov-report=xml -s -p no:warnings --cov-report term"
pythonpath = ["src/"]
testpaths = ["tests/"]


# linting configuration

[tool.ruff.lint]
ignore = [
    "E501", # line too long
    "E731", # do not assign a lambda expression, use a def

    # Ignore ignored, as the rule is now back in preview/nursery, which cannot
    # be ignored anymore without warnings.
    # https://github.com/astral-sh/ruff/issues/7491
    # "PLC1901", # Lots of false positives

    # False positives https://github.com/astral-sh/ruff/issues/5386
    "PLC0208", # Use a sequence type instead of a `set` when iterating over values
    "PLR0911", # Too many return statements ({returns} > {max_returns})
    "PLR0912", # Too many branches ({branches} > {max_branches})
    "PLR0913", # Too many arguments to function call ({c_args} > {max_args})
    "PLR0915", # Too many statements ({statements} > {max_statements})
    "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
    "PLW2901", # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
    "UP006",   # keep type annotation style as is
    "UP007",   # keep type annotation style as is
    # Ignored due to performance: https://github.com/charliermarsh/ruff/issues/2923
    "UP038", # Use `X | Y` in `isinstance` call instead of `(X, Y)`

]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"path/to/file.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pydoclint]
style = 'google'
exclude = '\.git|\.venv|__init__.py|tests|docs'
require-return-section-when-returning-nothing = false
check-return-types = true
allow-init-docstring = true
arg-type-hints-in-docstring = true
skip-checking-short-docstrings = true
check-class-attributes = false


# type checking configuration
[tool.mypy]
disallow_any_generics = true
disallow_incomplete_defs = true
no_implicit_optional = true
no_implicit_reexport = true
warn_no_return = false
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["returns.contrib.mypy.returns_plugin"]

[[tool.mypy.overrides]]
module = ["google.cloud"]
ignore_missing_imports = true
